# bevy_lighting_2d_experiment

./: Cargo.toml  LICENSE  notes.txt
assets/shaders/: game_of_life.wgsl  post_processing.wgsl  sdf.wgsl  sdf_post_processing.wgsl  sdf_util.wgsl
examples/: basic_shadows.rs
src/: lib.rs  main.rs
src/light2d/: light2d_plugin.rs  postprocess_plugin.rs
src/plugins/: init_game_plugin.rs  mod.rs
src/plugins/light2d/: light2d_plugin.rs  mod.rs  postprocess_plugin.rs
web/wasm/: index.html
web/wasm/assets/shaders/: post_processing.wgsl  sdf.wgsl
