[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy =  {version = "0.13.*", features=["webgpu"]}
#{git = "https://github.com/bevyengine/bevy.git" }

bytemuck = "1.15.0"
iyes_perf_ui = "0.2.3"